[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pywttr"
description = "Wrapper for wttr.in weather API"
readme = "README.md"
keywords = ["forecast"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["httpx>=0.18.2", "pywttr-models>=2,<3", "typing-extensions>=4"]
urls.documentation = "https://pywttr.readthedocs.io"
urls.repository = "https://github.com/monosans/pywttr"

[dependency-groups]
dev = [
  "covdefaults==2.3",
  "mypy[faster-cache]==1.19.0",
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
  "pytest-github-actions-annotate-failures==0.3",
  "ruff==0.14.8",
]
docs = [
  "mkdocs-material==9.7.0",
  "mkdocs-minify-html-plugin==0.3.9",
  "mkdocstrings==1.0.0",
  "mkdocstrings-python==2.0.1",
  "ruff==0.14.8",
]

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.version]
path = "src/pywttr/__init__.py"
